<?xml version="1.0"?>
<package format="3">
  <name>onrobot_2fg7_gripper_description</name>
  <version>0.0.1</version>
  <description>The onrobot_2fg7_gripper_description package adapted for ROS 2</description>

  <maintainer email="gabri.novas@aimen.es">Gabriel Novas</maintainer>

  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>launch_ros</depend>
  <depend>launch</depend>
  <depend>rclpy</depend>
  <depend>gazebo_ros</depend>
  <depend>ros2_control</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>rviz2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
